[package]
name = "slack-giffetteria"
version = "0.1.0"
authors = [
    "Riccardo Magliocchetti <riccardo.magliocchetti@gmail.com>",
    "Leonardo Mosciatti <leonardo.mosciatti@gmail.com"
]

[dependencies]
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
env_logger = "0.3.5"
futures = "0.1.7"
tokio-core = "0.1.0"
tokio-proto = "0.1"
tokio-service = "0.1"
rustc-serialize = "0.3.22"
