[package]
name = "slack-giffetteria"
version = "0.1.0"
authors = [
    "Riccardo Magliocchetti <riccardo.magliocchetti@gmail.com>",
    "Leonardo Mosciatti <leonardo.mosciatti@gmail.com"
]

[dependencies]
tokio-minihttp = { git = "https://github.com/xrmx/tokio-minihttp", rev = "d9409686b2683298e3155caaa0fefc2ac185bd1b" }
env_logger = "0.3.5"
futures = "0.1.7"
curl = "0.4.3"
tokio-core = "0.1.0"
tokio-curl = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
rustc-serialize = "0.3.22"
regex = "0.2"
